[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sharpost"
version = "0.1.0"
description = "AI-powered incident correlation and runbook generator for Kubernetes and AWS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "kubernetes>=29.0.0",
    "boto3>=1.34.0",
    "anthropic>=0.25.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "tiktoken>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "boto3-stubs[cloudwatch,s3]>=1.34.0",
    "types-PyYAML>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sharpost*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "RUF"]
ignore = [
    "S101",  # assert is fine in tests
    "B008",  # FastAPI Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["sharpost"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["kubernetes.*", "boto3.*", "botocore.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sharpost --cov-report=term-missing --cov-fail-under=80"
filterwarnings = ["error", "ignore::DeprecationWarning"]
